Fix low text contrast

--- a/src/TeamTavern/Client/Components/Card.scss
+++ b/src/TeamTavern/Client/Components/Card.scss
@@ -35,7 +35,7 @@
 .card-subheading {
     font-size: 12px;
     line-height: 1.5;
-    color: #888;
+    color: $light-text-color;
 }
 
 .card-header > * {
