--- a/src/TeamTavern/Client/Components/Copyable.scss
+++ b/src/TeamTavern/Client/Components/Copyable.scss
@@ -7,7 +7,7 @@
 .copyable-copied {
     font-size: 12px;
     line-height: 14px;
-    color: #888;
+    color: $light-text-color;
     font-weight: 400;
     margin-left: 6px;
 }
