--- a/src/TeamTavern/Client/Components/Divider.scss
+++ b/src/TeamTavern/Client/Components/Divider.scss
@@ -1,7 +1,7 @@
 .divider {
     font-size: 8px;
     line-height: 8px;
-    color: #888;
+    color: $light-text-color;
     font-weight: initial;
     margin: 0 6px;
     vertical-align: 2px;
