--- a/src/TeamTavern/Client/Components/Input.scss
+++ b/src/TeamTavern/Client/Components/Input.scss
@@ -19,7 +19,7 @@
 .input-sublabel {
     font-size: 12px;
     font-weight: 400;
-    color: #888;
+    color: $light-text-color;
 }
 
 .input-primary-sublabel {
