--- a/src/TeamTavern/Client/Components/Missing.scss
+++ b/src/TeamTavern/Client/Components/Missing.scss
@@ -1,3 +1,3 @@
 .missing {
-    color: #888;
+    color: $light-text-color;
 }
