--- a/src/TeamTavern/Client/Components/RadioButton.scss
+++ b/src/TeamTavern/Client/Components/RadioButton.scss
@@ -60,7 +60,7 @@
 .radio-button-description {
     margin: 14px auto 0;
     text-align: center;
-    color: #888;
+    color: $light-text-color;
     max-width: fit-content;
     max-width: -moz-fit-content;
 }
