--- a/src/TeamTavern/Client/Style/Base.scss
+++ b/src/TeamTavern/Client/Style/Base.scss
@@ -1,8 +1,8 @@
-$font: "Roboto",
-sans-serif;
-$primary-color: #b15e36;
+$font: "Roboto", sans-serif;
+$primary-color: #ab5b34;
 $disabled-primary-color: hsla(20, 40%, 81%, 1);
 $text-color: rgba(0, 0, 0, 0.733);
+$light-text-color: #757575;
 $disabled-color: rgb(221, 221, 221);
 $error-color: orangered;
 $max-width: 960px;
